[gd_scene load_steps=10 format=3 uid="uid://7e6uinw6amww"]

[ext_resource type="Script" uid="uid://cg22j0kknrcsh" path="res://Scripts/MarketPlace.gd" id="1_4db0n"]
[ext_resource type="Texture2D" uid="uid://bnlfyku8iovkc" path="res://Image_Assets/joker_slot.png" id="2_cknnu"]
[ext_resource type="Theme" uid="uid://cdqannvs4mgim" path="res://Themes/lineedit.tres" id="3_5favc"]
[ext_resource type="Texture2D" uid="uid://br5ieqhk22yys" path="res://Exercise_Images/emptyCard.png" id="4_tu2cb"]
[ext_resource type="PackedScene" uid="uid://bnnoqhjsevbgc" path="res://Scenes/bluePlay.tscn" id="5_r28rg"]
[ext_resource type="Shader" uid="uid://4oy7qxtaqfeu" path="res://Shaders/blueButtonRows.gdshader" id="6_dquc2"]
[ext_resource type="Texture2D" uid="uid://dvti7a6i2nj08" path="res://Image_Assets/mask.png" id="7_0fwmw"]
[ext_resource type="PackedScene" uid="uid://b7bl55nnnhp7a" path="res://Scenes/playButton.tscn" id="8_p5gsg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y2l54"]
shader = ExtResource("6_dquc2")
shader_parameter/mask_texture = ExtResource("7_0fwmw")
shader_parameter/rows = 100.0
shader_parameter/color1 = Color(0.0715, 0.1991, 0.55, 1)
shader_parameter/color2 = Color(0.0588235, 0.14902, 0.501961, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = 170.0
offset_right = 431.0
offset_bottom = 759.0
script = ExtResource("1_4db0n")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 431.0
offset_bottom = 589.0
texture = ExtResource("2_cknnu")
expand_mode = 4

[node name="JokerImage" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 80.0
offset_top = 78.0
offset_right = 367.0
offset_bottom = 489.0
texture_normal = ExtResource("4_tu2cb")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 72.0
offset_top = 35.0
offset_right = 371.0
offset_bottom = 61.0
theme = ExtResource("3_5favc")
theme_override_font_sizes/font_size = 25
text = "Choose Your Companion"

[node name="Progress" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 199.0
offset_top = 539.0
offset_right = 241.0
offset_bottom = 563.0
theme = ExtResource("3_5favc")
theme_override_font_sizes/font_size = 23
text = "1/2"

[node name="LeftButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 28.0
offset_top = 260.0
offset_right = 60.0
offset_bottom = 303.0
text = "<"

[node name="RightButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 381.0
offset_top = 260.0
offset_right = 411.0
offset_bottom = 303.0
text = ">"

[node name="Control2" type="Control" parent="."]
anchors_preset = 0
offset_left = 145.0
offset_top = 496.0
offset_right = 287.0
offset_bottom = 533.0

[node name="ColorRect" parent="Control2" instance=ExtResource("5_r28rg")]
material = SubResource("ShaderMaterial_y2l54")
layout_mode = 0
anchors_preset = 0
offset_left = 0.0
offset_right = 142.0
offset_bottom = 37.0

[node name="Button" parent="Control2" instance=ExtResource("8_p5gsg")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 142.0
offset_bottom = 37.0
text = "Select"

[connection signal="button_up" from="LeftButton" to="." method="_on_left_button_button_up"]
[connection signal="button_up" from="RightButton" to="." method="_on_right_button_button_up"]
[connection signal="button_up" from="Control2/Button" to="." method="_on_select_button_up"]
